# cpp-recursive-traversal-visitor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
recursive_traversal_visitor/: CMakeLists.txt  find_packages.cmake  targets.cmake
recursive_traversal_visitor/benchmarks/: benchmark_output.txt  benchmark_visit.cpp  pretty_print_benchmark_output.sh  readme.txt
recursive_traversal_visitor/include/recursive_traversal_visitor/: child_iterator_provider.h  recursive_traversal_visitor.h  tree_types.h  version.h  visitor.h
recursive_traversal_visitor/src/: main.cpp  recursive_traversal_visitor.cpp
